commit deploy app

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npm run build",
     "dev": "npm run dev",
+    "start":"node index.js",
 
     "test": "nodemon index.js",
     "client-install": "npm install --prefix client",
